# ds4-simplicio-apple-v6

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  GOAL_RESULT.md  PROGRESS.md  README.md  README.pt-BR.md  bootstrap.ps1  bootstrap.sh  package-lock.json  package.json
.github/: copilot-instructions.md
.specs/: README.md
cov-raw/: 20802.profraw  20803.profraw  20804.profraw  20805.profraw  20806.profraw  20807.profraw  20808.profraw  20809.profraw  20810.profraw  20811.profraw  20812.profraw  20813.profraw  20814.profraw  20815.profraw  20816.profraw  20817.profraw  20818.profraw  20819.profraw  20820.profraw  20821.profraw  20822.profraw  20823.profraw  20824.profraw  20825.profraw  20826.profraw  20827.profraw  20828.profraw  (+134 more)
runtime/: CMakeLists.txt  README.md
runtime/adapters/: dense_adapter_base.cpp
runtime/ane/: README.md
runtime/benchmarks/: CMakeLists.txt  dense_baseline.cpp
runtime/benchmarks/correctness/: correctness_check.cpp
runtime/cache/: README.md
runtime/core/: backend_selector.cpp  hardware_probe.cpp  hardware_probe.h  ius4v6_adapter.h  runtime_context.cpp  runtime_context.h  runtime_mode.cpp  runtime_mode.h
runtime/kv/: README.md
runtime/metal/: README.md  command_queue.cpp  command_queue.h
runtime/mlx/: README.md
runtime/moe/: README.md
runtime/neon/: README.md  neon_matmul.cpp
runtime/speculative/: README.md
runtime/telemetry/: telemetry_sink.h  telemetry_types.cpp
runtime/tuning/: README.md
tests/: CMakeLists.txt
tests/e2e/: README.md  us4-cli-serve.spec.ts  us4-cli.spec.ts
tests/unit/: CMakeLists.txt  adapter_generation_contract_test.cpp  backend_selector_contract_test.cpp  kernel_numerics_contract_test.cpp  kv_cold_store_summarizer_contract_test.cpp  moe_contract_test.cpp  neon_contract_test.cpp  runtime_acceleration_contract_test.cpp  runtime_context_contract_test.cpp  runtime_contract_runner.cpp  runtime_smoke_test.cpp  speculative_loader_contract_test.cpp
(+35 files in other folders)
